samples/_failures_safe/1761072925_0a3025_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bff9e9f0.c: In function ‘main’:
./samples/SAFE/__tmp_bff9e9f0.c:183:9: error: expected declaration or statement at end of input
  183 |         }
      |         ^
./samples/SAFE/__tmp_bff9e9f0.c:183:9: error: expected declaration or statement at end of input
